--- a/roles/install_agent/templates/buildagent_properties.j2
+++ b/roles/install_agent/templates/buildagent_properties.j2
@@ -32,7 +32,7 @@ systemDir=../system
 
 ## A token which is used to identify this agent on the TeamCity server for agent authorization purposes.
 ## It is automatically generated and saved back on the first agent connection to the server.
-authorizationToken=
+authorizationToken=7e694c82ff0caf88f0040adb0da81227
 
 
 ######################################
