--- a/roles/install_agent/templates/buildAgent.j2
+++ b/roles/install_agent/templates/buildAgent.j2
@@ -10,7 +10,7 @@
 ### END INIT INFO
 #Provide the correct user name:
 USER={{buildAgent_user}}
-JAVA_HOME={{boildTools_path}}{{java_home}}
+JAVA_HOME={{buildTools_path}}{{java_home}}
 
 case "$1" in
 start)
